[tool.poetry]
name = "video-concat"
version = "0.1.0"
description = ""
authors = ["Jorge Escobar <j@jorge3.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
video_concat = 'video_concat.app:cli'